--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "url": "https://github.com/uiuc-web-programming/mp3_starter_17.git"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-validator": "^6.14.2",
     "mongoose": "^5.4.18",
     "nodemon": "^1.11.0"
   }
